--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
   <title>Crypto Currencies</title>
 </head>
 <body>
-  
+  <nav class="navbar fixed-top navbar-light bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" href="#">Crypto Currencies</a>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
   <script src="app.js"></script>
 </body>
 </html>
