creates table headings for table

--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
     </div>
   </nav>
 
+  <table class="table table-bordered" style="margin-top: 90px;">
+    <thead>
+      <tr>
+        <th scope="col">UUID</th>
+        <th scope="col">BTC Price</th>
+        <th scope="col">Rank</th>
+        <th scope="col">Tier</th>
+        <th scope="col">Name</th>
+        <th scope="col">Price</th>
+        <th scope="col">Symbol</th>
+      </tr>
+    </thead>
+
+  </table>
+
   <script src="app.js"></script>
 </body>
 </html>
