creates table body with id of data

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <th scope="col">Symbol</th>
       </tr>
     </thead>
-
+    <tbody id="data"></tbody>
   </table>
 
   <script src="app.js"></script>
